--- a/index.html
+++ b/index.html
@@ -1,34 +1,49 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev's Portfolio</title>
+    <title>Resume</title>
 </head>
+
 <body>
-    <h1>Dev's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h1>Satyam Bhushan</h1>
+    <img src="me.jpeg" alt="Photo of Satyam Bhushan" height="150" width="150" />
+    <h2>Summary</h2>
+    <p>I am a college student with some experience in Web Development.</p>
     <hr />
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/Movie.png" height="200" alt="screenshot of my movie project" />
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/Birthday.png" height="200" alt="screenshot of my brithday invite project" />
+    <h2>Education</h2>
+    <ul>
+        <li>High School Graduate - Government High School - (2022-2024) </li>
+        <li>B.Tech (CSE) - (2024-2028)</li>
+    </ul>
     <hr />
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <h2>Work Experience</h2>
+    <ul>
+        <li>No Work Experience</li>
+    </ul>
+    <hr />
+    <h2>Skills</h2>
+    <ul>
+        <li>No Skills</li>
+    </ul>
+    <hr />
+    <h2>Awards and Certifications</h2>
+    <ul>
+        <li>Best Website - CICE Computer Institute (April 2024)</li>
+    </ul>
+    <hr />
+    <h2>Other</h2>
+    <ul>
+        <a href="hobbies.html">
+            <li>My Hobbies</li>
+        </a>
+        <a href="contact.html">
+            <li>Contact Me</li>
+        </a>
+    </ul>
+    <footer><small>© Satyam Bhushan. All rights reserved.</small></footer>
 </body>
+
 </html>
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
